[tool.poetry]
name = "dvd"
version = "1.1.0"
description = "Small utility to generate dvd screensaver videos or live streamings"
authors = ["melchor629 <melchor9000@gmail.com>", "RaulWhite"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/MajorcaDevs/dvd"
packages = [
    { include = "dvd" },
]
include = ["dvd/dvd_logo.png"]

[tool.poetry.scripts]
dvd = "dvd.__main__:main"

[tool.poetry.dependencies]
python = "^3.11"
Pillow = "^10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
