[project]
name = "dvd"
version = "1.1.1"
description = "Small utility to generate dvd screensaver videos or live streamings"
license = "MIT"
readme = "README.md"
repository = "https://github.com/MajorcaDevs/dvd"

authors = [
    {name = "melchor629", email = " <melchor9000@gmail.com>"},
    {name = "RaulWhite"},
]

requires-python = ">=3.11,<4.0"

packages = [
    { include = "dvd" },
]
include = ["dvd/dvd_logo.png"]

dependencies = [
    "Pillow (>=12.1.1,<13.0)",
]

[project.scripts]
dvd = "dvd.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
