[metadata]
name = dvd
version = 1.0.0
author = MajorcaDevs (melchor9000 & RaulWhite)
author_email = melchor9000@gmail.com
description = Small utility to generate dvd screensaver videos or live streamings
long_description = file: README.md
url = https://github.com/majorcadevs/dvd
license = MIT
license_files = LICENSE

[options]
packages = dvd
install_requires =
    pillow >= 8.0.0
include_package_data = true

[options.entry_points]
console_scripts =
    dvd = dvd.__main__:main

[options.data_files]
dvd = dvd/dvd_logo.png
